--- a/assets/dashboard.html
+++ b/assets/dashboard.html
@@ -70,7 +70,8 @@
                     <th scope="col">Filename</th>
                     <th scope="col">Timestamp</th>
                     <th scope="col">Targets</th>
-                    <th scope="col">Results</th>
+                    <th scope="col">Open</th>
+                    <th scope="col">Closed</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -80,7 +81,8 @@
                     <td>0.json</td>
                     <td>1550003301</td>
                     <td>99</td>
-                    <td>67 99</td>
+                    <td>67</td>
+                    <td>99</td>
                     <td><a href="#" class="btn btn-primary btn-sm">View</a></td>
                 </tr>
                 <tr>
@@ -88,7 +90,8 @@
                     <td>1.json</td>
                     <td>1550095724</td>
                     <td>96</td>
-                    <td>64 39</td>
+                    <td>64</td>
+                    <td>39</td>
                     <td><a href="#" class="btn btn-primary btn-sm">View</a></td>
                 </tr>
             </tbody>
